[fix] fix record controller