@@ -11,6 +11,7 @@ import com.ssafy.devway.domain.record.repository.RecordRespository;
 import com.ssafy.devway.global.config.autoIncrementSequence.service.AutoIncrementSequenceService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -30,63 +31,62 @@ public class RecordService {
   private final ChallengeRepository challengeRepository;
   private final AutoIncrementSequenceService autoIncrementSequenceService;
 
-  /*
-   * 4.1 인증 생성
-   * */
-  public Record insertRecord(RecordCreateReqDto dto, Long memberId) {
-    Member member = memberRepository.findByMemberId(memberId);
+  public ResponseEntity<?> insertRecord(RecordCreateReqDto dto) {
+    Member member = memberRepository.findByMemberId(dto.getMemberId());
     Challenge challenge = challengeRepository.findByChallengeId(dto.getChallengeId());
+
     LocalDate today = LocalDate.now();
+
     Record record = Record.builder()
         .recordId(autoIncrementSequenceService.generateSequence(Record.SEQUENCE_NAME))
         .challenge(challenge)
         .member(member)
         .recordDate(today)
-        .recordSuccess(true)
+        .recordSuccess(false)
         .recordTemplates(dto.getRecordTemplates())
         .build();
 
-    recordRespository.save(record);
+    Record save = recordRespository.save(record);
 
-    return record;
+    if(save == null)
+      return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+
+    return ResponseEntity.ok().build();
   }
 
-  /*
-   * 4.2 특정 챌린지의 월 별 인증 전체 조회
-   * */
   @Transactional(readOnly = true)
-  public List<CalendarRecordResDto> selectCalendarRecord(Long challengeId, Long memberId,
+  public ResponseEntity<List<CalendarRecordResDto>> selectCalendarRecord(
+      Long memberId,
+      Long challengeId,
       int month) {
     List<Record> recordList = recordRespository.findByChallenge_ChallengeIdAndMember_MemberIdOrderByRecordDateAsc(
         challengeId, memberId);
-    System.out.println(recordList);
-    return recordList.stream()
+
+    if(recordList.isEmpty())
+      ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+
+    List<CalendarRecordResDto> collect = recordList.stream()
         .filter(record -> record.getRecordDate().getMonthValue() == month)
         .map(this::convertToCalendarRecordResDto)
-        .collect(Collectors.toList());
+        .toList();
+
+    return ResponseEntity.ok(collect);
   }
 
-  /*
-   * 4.3 특정 인증 상세 조회
-   * */
   @Transactional(readOnly = true)
-  public Record selectRecord(Long recordId) {
-    return recordRespository.findByRecordId(recordId);
-  }
+  public ResponseEntity<Record> selectRecord(Long recordId) {
+    Record byRecordId = recordRespository.findByRecordId(recordId);
+    if(byRecordId == null)
+      ResponseEntity.status(HttpStatus.NO_CONTENT).build();
 
-  /*
-   * 4.4 특정 인증 삭제
-   * */
-  public Long deleteRecord(Long recordId) {
-    recordRespository.deleteById(recordId);
-    return recordId;
+    return ResponseEntity.ok(byRecordId);
   }
 
   public ResponseEntity<Record> setSuccess(Long recordId) {
     Record byRecordId = recordRespository.findByRecordId(recordId);
-      if (byRecordId == null) {
-          return ResponseEntity.notFound().build();
-      }
+    if (byRecordId == null) {
+      return ResponseEntity.notFound().build();
+    }
 
     byRecordId.setRecordSuccess(true);
     return ResponseEntity.ok(byRecordId);
